# spring-2026-lab11-CarolineDelva-GU-1

./: .env.example  .gitignore  LICENSE  README.md  api_response.txt  architecture.md  pyproject.toml
src/flight-booking-agent/: agent.py  database.py  dependencies.py  env_settings.py  tools.py
src/registry-stub/: server.py
src/travel-assistant-agent/: agent.py  database.py  dependencies.py  env_settings.py  models.py  registry_discovery_client.py  remote_agent_client.py  server.py  tools.py
test/: agent_discovery_test.py  check_agent_cards.sh  observations.md  simple_agents_test.py  task2_rest_output.txt
